# ChangeLog for media-video/vlmc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Sep 2010; Nikoli <nikoli@lavabit.com> vlmc-9999.ebuild:
  update deps and linguas

  19 Aug 2010; Nikoli <nikoli@lavabit.com> vlmc-9999.ebuild:
  updated deps

*vlmc-9999 (10 Jun 2010)

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +vlmc-9999.ebuild, +metadata.xml:
  vlmc initial ebuild
