@@ -1,3 +1,3 @@
-EBUILD vlmc-9999.ebuild 1146 RMD160 a15ff070bdc7e79b229164c88e04a8f1dece22e9 SHA1 b46ddca0006ee158e1e7e3268f2154351a9840e9 SHA256 eb38a7cb80c0cc20c89b18dbc4fbba4a3be0efa6f13e3153a752dfa9e17c0cad
-MISC ChangeLog 408 RMD160 148fb2bcb56fea929c8b63b54f50da4891b0a66b SHA1 e4df5661633ef40450ee4b6a4eff1e354e629188 SHA256 aa24f08983b238872f7752eae5d4735dd7afeb23650731276134ffb579640759
+EBUILD vlmc-9999.ebuild 993 RMD160 e119481e8c24537f25168b082a00908b80e13fa4 SHA1 060c03d44c1b6897beadb1e32fabaee1f3aec818 SHA256 bcf2b427637c9ba1d9d5e695caf16c8a19c17a0d6b418c3f2170963d5710b451
+MISC ChangeLog 492 RMD160 bd81f3917470e775bffa96eb658fd1b1f667668c SHA1 67c18add310450ce8dbdbaa080bb012ad08fb360 SHA256 69e58be5aad8569f5e20921a70e83f75351db032407be8a15f4acae93eb117ff
 MISC metadata.xml 246 RMD160 365a2af90d65b4cdf3173796433f7419185886cd SHA1 2ab41bdcbdc4cba8cee3558af4ed6558df5aef4f SHA256 7383ad47c2b90e0e006aee3461a4bcee355ef96eab215d868bb68e38e9910bea
